# TCG-pregrader

./: .env.example  .gitignore  pyproject.toml
.kiro/specs/pokemon-card-pregrader/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/training-data-pipeline/: .config.kiro  design.md  requirements.md  tasks.md
data/: manifest.csv  manifest_clean.csv
data_pipeline/: __init__.py  _image_utils.py  cli.py  config.py  deduplicator.py  downloader.py  exceptions.py  generate_synthetic_data.py  manifest.py  models.py  orchestrator.py  preprocessor.py  psa_client.py  reporter.py
data_pipeline/scrapers/: __init__.py  base.py  cardladder.py  ebay.py  ebay_api.py
scripts/: build_manifest_from_folder.py  clean_dataset.py  smoke_test_training.py  train.py
src/pregrader/: __init__.py  cli.py  config.py  enums.py  exceptions.py  logging_config.py  registry.py  schemas.py
src/pregrader/api/: app.py  dependencies.py
src/pregrader/services/: __init__.py  grader.py  ingestion.py  preprocessing.py
src/pregrader/training/: __init__.py  augmentation.py  dataset.py  evaluator.py  manifest.py  trainer.py
tests/: conftest.py
tests/property/: test_config_props.py  test_grader_props.py  test_ingestion_props.py  test_preprocessing_props.py  test_registry_props.py  test_schema_props.py
tests/property/data_pipeline/: test_psa_quota_enforcement.py
tests/unit/: conftest.py  test_api.py  test_augmentation.py  test_cli.py  test_grader.py  test_ingestion.py  test_preprocessing.py  test_registry.py  test_trainer_evaluator.py  test_training.py
(+11 files in other folders)
